--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes fast-pop {
+    from { font-weight: bold; }
+    to { font-weight: normal; }
+}
