--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .zoomTransform {
+    transition-property: transform;
+    transition-duration: 200ms;
+    transition-timing-function: ease;
+  }
+}
