--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer utilities {
-  .zoomTransform {
+  .smoothTransform {
     transition-property: transform;
     transition-duration: 200ms;
     transition-timing-function: ease;
